@@ -14,19 +14,15 @@ import ru.myx.ae3.exec.ExecProcess;
 import ru.myx.ae3.report.Report;
 import ru.myx.util.QueueStackRecord;
 
-/**
- * @author myx
- * 		
- */
+/** @author myx */
 public abstract class ConsoleTty extends AbstractCharacterConsole {
-	
+
 	private static final byte[] CRLF = "\r\n".getBytes(Engine.CHARSET_ASCII);
-	
+
 	private static final byte[] MSG_WELCOME;
+
+	private static final byte[] NULL_BYTES = "null".getBytes(Engine.CHARSET_ASCII);
 	
-	private static final byte[] NULL_BYTES = "null"
-			.getBytes(Engine.CHARSET_ASCII);
-			
 	private static final byte[] STATE_ATTENTION = new byte[]{
 			(byte) 27, // ESCAPE
 			(byte) '[', (byte) '0', // reset
@@ -35,7 +31,7 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 			(byte) '7', (byte) 'm',
 			//
 	};
-	
+
 	private static final byte[] STATE_ERROR = new byte[]{
 			(byte) 7, // BEEP
 			(byte) 27, // ESCAPE
@@ -45,23 +41,22 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 			(byte) '1', (byte) 'm',
 			//
 	};
-	
+
 	private static final byte[] STATE_NORMAL = new byte[]{
 			(byte) 27, // ESCAPE
 			(byte) '[', (byte) '0', // reset
 			(byte) 'm',
 			//
 	};
+
+	private static final byte[] TELNET_DETECTED = "# telnet detected\r\n".getBytes(Engine.CHARSET_ASCII);
 	
-	private static final byte[] TELNET_DETECTED = "# telnet detected\r\n"
-			.getBytes(Engine.CHARSET_ASCII);
-			
 	private static final byte[] TELNET_PING = new byte[]{
 			//
 			// DO SUPPRESS GO AHEAD
 			(byte) 255, (byte) 253, (byte) 3,
 	};
-	
+
 	private static final byte[] TELNET_SETUP = new byte[]{
 			//
 			// DO SUPPRESS GO AHEAD
@@ -80,42 +75,36 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 			(byte) 255, (byte) 253, (byte) 31,
 			// ASK WINDOW SIZE
 			(byte) 255, (byte) 250, (byte) 31, (byte) 1, (byte) 255, (byte) 240,
-			/**
-			 * <code>
+			/** <code>
 			// DO ENCRYPT
 			(byte) 255,
 			(byte) 253,
 			(byte) 38,
-			</code>
-			 */
+			</code> */
 			// DON'T ENCRYPT
 			(byte) 255, (byte) 254, (byte) 38,
-			/**
-			 * <code>
+			/** <code>
 			// DO AUTHENTICATE
 			(byte) 255,
 			(byte) 253,
 			(byte) 37,
-			</code>
-			 */
+			</code> */
 			// DON'T AUTHENTICATE
 			(byte) 255, (byte) 254, (byte) 37,
 			// end
 	};
+
+	private static final byte[] TERMINAL_ANSI_DETECTED = "# ansi detected\r\n".getBytes(Engine.CHARSET_ASCII);
 	
-	private static final byte[] TERMINAL_ANSI_DETECTED = "# ansi detected\r\n"
-			.getBytes(Engine.CHARSET_ASCII);
-			
 	private static final byte[] TERMINAL_PING = new byte[]{
 			//
 			// WHAT ARE YOU
 			(byte) 27, (byte) '[', (byte) 'c',
 	};
-	
+
 	private static final byte[] TERMINAL_SETUP = new byte[]{
 			//
-			/**
-			 * <code>
+			/** <code>
 			// RESET
 			(byte) 27,
 			(byte) 'c',
@@ -133,91 +122,76 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 			(byte) 27,
 			(byte) '[',
 			(byte) 'c',
-			</code>
-			 */
+			</code> */
 			// end
 	};
-	
+
 	static {
 		{
 			final TransferCollector collector = Transfer.createCollector();
-			/**
-			 * HEAD
-			 */
+			/** HEAD */
 			collector.getTarget().absorb('#');
-			/**
-			 * TELNET: WILL SUPPRESS GO AHEAD
-			 */
+			/** TELNET: WILL SUPPRESS GO AHEAD */
 			collector.getTarget().absorb(255);
 			collector.getTarget().absorb(251);
 			collector.getTarget().absorb(3);
-			/**
-			 * TELNET: WILL ECHO
-			 */
+			/** TELNET: WILL ECHO */
 			collector.getTarget().absorb(255);
 			collector.getTarget().absorb(251);
 			collector.getTarget().absorb(1);
-			/**
-			 * TERMINAL: WHAT ARE YOU
-			 */
+			/** TERMINAL: WHAT ARE YOU */
 			collector.getTarget().absorb(27);
 			collector.getTarget().absorb('[');
 			collector.getTarget().absorb('c');
-			/**
-			 * Human friendly message
-			 */
+			/** Human friendly message */
 			collector.getTarget()
-					.absorbBuffer(Transfer.wrapBuffer(
-							(" Welcome to " + Engine.HOST_NAME + " running "
-									+ Engine.VERSION_STRING + "\r\n")
-											.getBytes(Engine.CHARSET_ASCII)));
-											
+					.absorbBuffer(Transfer.wrapBuffer((" Welcome to " + Engine.HOST_NAME + " running " + Engine.VERSION_STRING + "\r\n").getBytes(Engine.CHARSET_ASCII)));
+			
 			MSG_WELCOME = collector.toBinary().nextDirectArray();
 		}
 	}
-	
+
 	private AnsiState ansiState;
-	
+
 	private boolean ansiDetected;
-	
+
 	private final StringBuilder builder = new StringBuilder();
-	
+
 	private final TransferCollector collector = Transfer.createCollector();
-	
+
 	private int consoleHeight;
-	
+
 	private ConsoleTtyState consoleState;
-	
+
 	private int consoleWidth;
-	
+
 	private ConsoleState stateCurrent;
-	
+
 	private ConsoleState stateRequested;
-	
+
 	private ConsoleTtyTask<?> task;
-	
+
 	private TelnetState telnetState;
-	
+
 	private boolean telnetDetected;
-	
+
 	private final QueueStackRecord<ConsoleTtyTask<?>> todo = new QueueStackRecord<>();
-	
+
 	/**
-	 * 
+	 *
 	 */
 	protected ConsoleTty() {
+		
 		this.consoleDestroy();
 	}
-	
+
 	/**
-	 * 
+	 *
 	 */
 	private void ansiHideCursor() {
-		
+
 		if (this.ansiDetected) {
-			/**
-			 * HIDE CURSOR
-			 */
+			/** HIDE CURSOR */
 			final TransferTarget target = this.collector.getTarget();
 			target.absorb(27);
 			target.absorb('[');
@@ -227,55 +201,14 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 			target.absorb('l');
 		}
 	}
-	
+
 	/**
-	 * 
-	 * @return
-	 */
-	public boolean isAnsiDetected() {
-		
-		return this.ansiDetected;
-	}
-	
-	/**
-	 * 
-	 * @return
-	 */
-	public boolean isTelnetDetected() {
-		
-		return this.telnetDetected;
-	}
-	
-	/**
-	 * @return
-	 * 
-	 */
-	protected boolean tryPingClient() {
-		
-		if (this.telnetDetected) {
-			final TransferTarget target = this.collector.getTarget();
-			target.absorbBuffer(Transfer.wrapBuffer(ConsoleTty.TELNET_PING));
-			this.flush();
-			return true;
-		}
-		if (this.ansiDetected) {
-			final TransferTarget target = this.collector.getTarget();
-			target.absorbBuffer(Transfer.wrapBuffer(ConsoleTty.TERMINAL_PING));
-			this.flush();
-			return true;
-		}
-		return false;
-	}
-	
-	/**
-	 * 
+	 *
 	 */
 	private void ansiShowCursor() {
-		
+
 		if (this.ansiDetected) {
-			/**
-			 * SHOW CURSOR
-			 */
+			/** SHOW CURSOR */
 			final TransferTarget target = this.collector.getTarget();
 			target.absorb(27);
 			target.absorb('[');
@@ -285,35 +218,27 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 			target.absorb('h');
 		}
 	}
-	
+
 	@Override
 	public void checkUpdateClient() {
-		
-		/**
-		 * DO NOT use checkState from Tasks!
-		 */
+
+		/** DO NOT use checkState from Tasks! */
 		synchronized (this) {
 			if (this.ansiDetected) {
-				/**
-				 * TERMINAL: WHAT ARE YOU
-				 */
+				/** TERMINAL: WHAT ARE YOU */
 				final TransferTarget target = this.collector.getTarget();
 				target.absorb(27);
 				target.absorb('[');
 				target.absorb('c');
 			}
 		}
-		/**
-		 * no flush intentionally
-		 */
+		/** no flush intentionally */
 		// this.flush();
 	}
-	
-	/**
-	 * Use this to release resources associated current tty console session
-	 */
+
+	/** Use this to release resources associated current tty console session */
 	protected void consoleDestroy() {
-		
+
 		this.consoleState = ConsoleTtyState.INITIAL;
 		this.ansiState = AnsiState.UNDETECTED;
 		this.ansiDetected = false;
@@ -331,55 +256,42 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 			this.task = null;
 		}
 	}
-	
-	/**
-	 * @return
-	 */
+
+	/** @return */
 	protected abstract String consolePeerIdentity();
-	
-	/**
-	 * Use this to start a new tty console session
-	 */
+
+	/** Use this to start a new tty console session */
 	protected void consoleStart() {
-		
+
 		final String peerIdentity = this.consolePeerIdentity();
 		this.consoleState = ConsoleTtyState.HANDSHAKE;
 		final TransferTarget target = this.collector.getTarget();
 		target.absorbBuffer(Transfer.wrapBuffer(ConsoleTty.MSG_WELCOME));
-		target.absorbBuffer(Transfer
-				.wrapBuffer(("# your address is: " + peerIdentity + "\r\n")
-						.getBytes(Engine.CHARSET_ASCII)));
+		target.absorbBuffer(Transfer.wrapBuffer(("# your address is: " + peerIdentity + "\r\n").getBytes(Engine.CHARSET_ASCII)));
 		this.consumeFromClientWanted(true);
 		this.flush();
-		final ExecProcess ctx = Exec.createProcess(null,
-				"TTY Session: " + peerIdentity);
+		final ExecProcess ctx = Exec.createProcess(null, "TTY Session: " + peerIdentity);
 		ctx.setConsole(this);
 		Act.later(ctx, TtySession.INSTANCE, ctx, 1000L);
 	}
-	
-	/**
-	 * @param b
-	 * @return
-	 */
+
+	/** @param b
+	 * @return */
 	protected boolean consumeFromClient(final int b) {
-		
+
 		return this.nextTelnet(b);
 	}
-	
-	/**
-	 * @param flag
-	 * @return
-	 */
+
+	/** @param flag
+	 * @return */
 	protected abstract boolean consumeFromClientWanted(final boolean flag);
-	
-	/**
-	 * @param buffer
-	 * @return
-	 */
+
+	/** @param buffer
+	 * @return */
 	protected abstract boolean consumeFromServer(final TransferBuffer buffer);
-	
+
 	private final boolean consumeNextPayload(final int b) {
-		
+
 		final ConsoleTtyTask<?> task;
 		flush : {
 			sync : synchronized (this) {
@@ -403,9 +315,9 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 			}
 			this.flush();
 		}
-		
+
 		final ConsoleTtyTask<?> replacement = task.consumeNext(this, b);
-		
+
 		if (task != replacement) {
 			hide : {
 				sync : synchronized (this) {
@@ -428,15 +340,13 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 		this.flush();
 		return true;
 	}
-	
+
 	@Override
 	public void flush() {
-		
+
 		final TransferBuffer buffer;
 		synchronized (this) {
-			/**
-			 * collector is reset ready to collect new messages after that
-			 */
+			/** collector is reset ready to collect new messages after that */
 			buffer = this.collector.toBinary().nextCopy();
 		}
 		assert buffer != null : "NULL buffer";
@@ -446,12 +356,10 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 			}
 		}
 	}
-	
-	/**
-	 * @return
-	 */
+
+	/** @return */
 	private TransferTarget internCheckPrepareMessage() {
-		
+
 		final TransferTarget target = this.collector.getTarget();
 		if (this.task != null) {
 			if (this.telnetDetected) {
@@ -459,16 +367,12 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 				target.absorb(248);
 			}
 			if (this.ansiDetected) {
-				/**
-				 * CLEAR LINE
-				 */
+				/** CLEAR LINE */
 				target.absorb(27);
 				target.absorb('[');
 				target.absorb('2');
 				target.absorb('K');
-				/**
-				 * POSITION 0
-				 */
+				/** POSITION 0 */
 				target.absorb(27);
 				target.absorb('[');
 				target.absorb('0');
@@ -478,30 +382,27 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 		this.internCheckStatus();
 		return target;
 	}
-	
+
 	private void internCheckStatus() {
-		
+
 		if (this.stateCurrent != this.stateRequested) {
 			if (this.ansiDetected) {
 				if (this.stateRequested == ConsoleState.NORMAL) {
-					this.collector.getTarget().absorbBuffer(
-							Transfer.wrapBuffer(ConsoleTty.STATE_NORMAL));
+					this.collector.getTarget().absorbBuffer(Transfer.wrapBuffer(ConsoleTty.STATE_NORMAL));
 				} else //
-					if (this.stateRequested == ConsoleState.ATTENTION) {
-					this.collector.getTarget().absorbBuffer(
-							Transfer.wrapBuffer(ConsoleTty.STATE_ATTENTION));
+				if (this.stateRequested == ConsoleState.ATTENTION) {
+					this.collector.getTarget().absorbBuffer(Transfer.wrapBuffer(ConsoleTty.STATE_ATTENTION));
 				} else //
-						if (this.stateRequested == ConsoleState.ERROR) {
-					this.collector.getTarget().absorbBuffer(
-							Transfer.wrapBuffer(ConsoleTty.STATE_ERROR));
+				if (this.stateRequested == ConsoleState.ERROR) {
+					this.collector.getTarget().absorbBuffer(Transfer.wrapBuffer(ConsoleTty.STATE_ERROR));
 				}
 			}
 			this.stateCurrent = this.stateRequested;
 		}
 	}
-	
+
 	boolean internEcho(final int b) {
-		
+
 		if (this.telnetDetected) {
 			this.internCheckStatus();
 			final TransferTarget target = this.collector.getTarget();
@@ -512,20 +413,17 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 				this.flush();
 				return true;
 			}
-			/**
-			 * if ((this.ansiState != AnsiState.UNDETECTED) && ((b & 0x80) !=
-			 * 0)) { this.consumeFromServer( Transfer.wrapBuffer( new byte[] {
-			 * (byte) 22, (byte) (b & 0x7F) } ) ); return; }
-			 */
+			/** if ((this.ansiState != AnsiState.UNDETECTED) && ((b & 0x80) != 0)) {
+			 * this.consumeFromServer( Transfer.wrapBuffer( new byte[] { (byte) 22, (byte) (b &
+			 * 0x7F) } ) ); return; } */
 			target.absorbBuffer(Transfer.singletonBuffer((byte) b));
 			this.flush();
 		}
 		return true;
 	}
-	
-	private final void internSendMessageIdent(final String message,
-			final int index) {
-			
+
+	private final void internSendMessageIdent(final String message, final int index) {
+		
 		boolean ident = true;
 		final TransferTarget target = this.collector.getTarget();
 		for (final char c : message.toCharArray()) {
@@ -543,37 +441,44 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 					target.absorb('\t');
 				}
 			}
-			target.absorbBuffer(Transfer.wrapBuffer(
-					Character.toString(c).getBytes(Engine.CHARSET_UTF8)));
+			target.absorbBuffer(Transfer.wrapBuffer(Character.toString(c).getBytes(Engine.CHARSET_UTF8)));
 		}
 		target.absorb('\r');
 		target.absorb('\n');
 		this.flush();
 	}
-	
+
+	/** @return */
+	public boolean isAnsiDetected() {
+
+		return this.ansiDetected;
+	}
+
+	/** @return */
+	public boolean isTelnetDetected() {
+
+		return this.telnetDetected;
+	}
+
 	private final boolean nextTelnet(final int i) {
-		
+
 		switch (this.telnetState) {
 			case UNDETECTED : {
-				if (i != 255
-						|| this.consoleState != ConsoleTtyState.HANDSHAKE) {
-					if (i == 10
-							&& this.consoleState == ConsoleTtyState.HANDSHAKE) {
+				if (i != 255 || this.consoleState != ConsoleTtyState.HANDSHAKE) {
+					if (i == 10 && this.consoleState == ConsoleTtyState.HANDSHAKE) {
 						this.consoleState = ConsoleTtyState.IDLE;
 					}
 					return this.nextTerminal(i);
 				}
-				
+
 				final TransferTarget target = this.collector.getTarget();
-				target.absorbBuffer(
-						Transfer.wrapBuffer(ConsoleTty.TELNET_DETECTED));
-				target.absorbBuffer(
-						Transfer.wrapBuffer(ConsoleTty.TELNET_SETUP));
+				target.absorbBuffer(Transfer.wrapBuffer(ConsoleTty.TELNET_DETECTED));
+				target.absorbBuffer(Transfer.wrapBuffer(ConsoleTty.TELNET_SETUP));
 				this.telnetState = TelnetState.DETECTED;
 				this.telnetDetected = true;
 				this.onDetectTelnet();
 			}
-				//$FALL-THROUGH$
+			//$FALL-THROUGH$
 			case DETECTED :
 				if (i == 255) {
 					this.telnetState = TelnetState.ATTENTION;
@@ -614,6 +519,7 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 					case 31 :
 						this.telnetState = TelnetState.TELNET_SB_DIMENSIONS_W1;
 						return true;
+					default :
 				}
 				System.out.println(">>>>> TELNET_SB, byte=" + i);
 				this.telnetState = TelnetState.DETECTED;
@@ -632,8 +538,7 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 				return true;
 			case TELNET_SB_DIMENSIONS_H2 :
 				this.consoleHeight += i;
-				this.sendMessage("# got dimensions: " + this.consoleWidth + "x"
-						+ this.consoleHeight);
+				this.sendMessage("# got dimensions: " + this.consoleWidth + "x" + this.consoleHeight);
 				this.telnetState = TelnetState.DETECTED;
 				return true;
 			case TELNET_SB_TERM_TYPE :
@@ -665,14 +570,13 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 						// will encrypt
 						this.sendMessage("# will encrypt");
 						return true;
+					default :
 				}
-				Report.event("TELNET", "unknown will",
-						"TELNET_WILL, byte=" + i);
+				Report.event("TELNET", "unknown will", "TELNET_WILL, byte=" + i);
 				return true;
 			case TELNET_WONT :
 				this.telnetState = TelnetState.DETECTED;
-				Report.event("TELNET", "unknown won't",
-						"TELNET_WONT, byte=" + i);
+				Report.event("TELNET", "unknown won't", "TELNET_WONT, byte=" + i);
 				return true;
 			case TELNET_DO :
 				this.telnetState = TelnetState.DETECTED;
@@ -683,50 +587,37 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 					case 3 :
 						// do suppress go ahead
 						return true;
+					default :
 				}
 				Report.event("TELNET", "unknown do", "TELNET_DO, byte=" + i);
 				return true;
 			case TELNET_DONT :
 				this.telnetState = TelnetState.DETECTED;
-				Report.event("TELNET", "unknown don't",
-						"TELNET_DONT, byte=" + i);
+				Report.event("TELNET", "unknown don't", "TELNET_DONT, byte=" + i);
 				return true;
+			default :
 		}
 		return false;
 	}
-	
-	/**
-	 * Override this method with a proper trigger.
-	 * 
-	 * Called not more than once per session.
-	 */
-	protected void onDetectTelnet() {
-		
-		// empty
-		
-	}
-	
+
 	private final boolean nextTerminal(final int i) {
-		
+
 		switch (this.ansiState) {
 			case UNDETECTED : {
 				if (i != 27 || this.consoleState != ConsoleTtyState.HANDSHAKE) {
-					if (this.consoleState == ConsoleTtyState.HANDSHAKE
-							&& i == 10) {
+					if (this.consoleState == ConsoleTtyState.HANDSHAKE && i == 10) {
 						this.consoleState = ConsoleTtyState.IDLE;
 					}
 					return this.consumeNextPayload(i);
 				}
 				final TransferTarget target = this.collector.getTarget();
-				target.absorbBuffer(
-						Transfer.wrapBuffer(ConsoleTty.TERMINAL_ANSI_DETECTED));
-				target.absorbBuffer(
-						Transfer.wrapBuffer(ConsoleTty.TERMINAL_SETUP));
+				target.absorbBuffer(Transfer.wrapBuffer(ConsoleTty.TERMINAL_ANSI_DETECTED));
+				target.absorbBuffer(Transfer.wrapBuffer(ConsoleTty.TERMINAL_SETUP));
 				this.ansiState = AnsiState.DETECTED;
 				this.ansiDetected = true;
 				this.onDetectAnsi();
 			}
-				//$FALL-THROUGH$
+			//$FALL-THROUGH$
 			case DETECTED :
 				switch (i) {
 					case 3 :
@@ -737,6 +628,7 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 					case 27 :
 						this.ansiState = AnsiState.ESCAPE;
 						return true;
+					default :
 				}
 				return this.consumeNextPayload(i);
 			case HIGH_BIT :
@@ -754,35 +646,29 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 					case '[' : // 91
 						this.ansiState = AnsiState.DT2;
 						return true;
+					default :
 				}
 				System.out.println(">>>>> ATT, byte=" + i);
-				Report.event("TELNET", "unknown attention",
-						"TERMINAL_ATTENTION, byte=" + i);
+				Report.event("TELNET", "unknown attention", "TERMINAL_ATTENTION, byte=" + i);
 				this.ansiState = AnsiState.DETECTED;
 				return true;
 			case DT1 :
 				System.out.println(">>>>> EXT1, byte=" + i);
-				Report.event("TELNET", "unknown ext1",
-						"TERMINAL_TERMINAL_EXT1_KEY, byte=" + i);
+				Report.event("TELNET", "unknown ext1", "TERMINAL_TERMINAL_EXT1_KEY, byte=" + i);
 				this.ansiState = AnsiState.DETECTED;
 				return true;
 			case DT2 :
 				this.builder.append((char) i);
 				if (i >= 64 && i <= 126) {
-					/**
-					 * vt100 - ^[[?1;0c ^[[?1;1c or ^[[?1;2c
-					 * 
-					 * http://docstore.mik.ua/orelly/unix/upt/ch05_05.htm
-					 */
+					/** vt100 - ^[[?1;0c ^[[?1;1c or ^[[?1;2c
+					 *
+					 * http://docstore.mik.ua/orelly/unix/upt/ch05_05.htm */
 					final String string = this.builder.toString();
-					if (string.equals("?1;0c") || string.equals("?1;1c")
-							|| string.equals("?1;2c")) {
+					if (string.equals("?1;0c") || string.equals("?1;1c") || string.equals("?1;2c")) {
 						// vt100
 					} else {
 						System.out.println(">>>>> EXT2, buf=" + this.builder);
-						Report.event("TELNET", "unknown ext2",
-								"TERMINAL_TERMINAL_EXT2_KEY, buf="
-										+ this.builder);
+						Report.event("TELNET", "unknown ext2", "TERMINAL_TERMINAL_EXT2_KEY, buf=" + this.builder);
 					}
 					this.ansiState = AnsiState.DETECTED;
 					this.builder.setLength(0);
@@ -790,142 +676,144 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 				return true;
 			case DT3 :
 				System.out.println(">>>>> EXT3, byte=" + i);
-				Report.event("TELNET", "unknown ext3",
-						"TERMINAL_TERMINAL_EXT2_KEY, byte=" + i);
+				Report.event("TELNET", "unknown ext3", "TERMINAL_TERMINAL_EXT2_KEY, byte=" + i);
 				this.ansiState = AnsiState.DETECTED;
 				return true;
+			default :
 		}
 		return false;
 	}
-	
-	/**
-	 * Override this method with a proper trigger.
-	 * 
-	 * Called not more than once per session.
-	 */
+
+	/** Override this method with a proper trigger.
+	 *
+	 * Called not more than once per session. */
 	protected void onDetectAnsi() {
-		
+
 		// empty
 	}
-	
+
+	/** Override this method with a proper trigger.
+	 *
+	 * Called not more than once per session. */
+	protected void onDetectTelnet() {
+
+		// empty
+
+	}
+
 	@Override
 	public Value<Boolean> readBoolean(final String title) {
+
+		final ConsoleTtyTask<Boolean> task = this.telnetDetected
+			? new TaskReadBooleanCharacter(title, null)
+			: new TaskReadBooleanString(title, null);
+		this.todo(task);
+		return task;
+	}
+
+	@Override
+	public Value<Boolean> readBoolean(final String title, final boolean defaultValue) {
 		
 		final ConsoleTtyTask<Boolean> task = this.telnetDetected
-				? new TaskReadBooleanCharacter(title, null)
-				: new TaskReadBooleanString(title, null);
+			? new TaskReadBooleanCharacter(
+					title,
+					defaultValue
+						? Boolean.TRUE
+						: Boolean.FALSE)
+			: new TaskReadBooleanString(
+					title,
+					defaultValue
+						? Boolean.TRUE
+						: Boolean.FALSE);
 		this.todo(task);
 		return task;
 	}
-	
-	@Override
-	public Value<Boolean> readBoolean(final String title,
-			final boolean defaultValue) {
-			
-		final ConsoleTtyTask<Boolean> task = this.telnetDetected
-				? new TaskReadBooleanCharacter(title,
-						defaultValue ? Boolean.TRUE : Boolean.FALSE)
-				: new TaskReadBooleanString(title,
-						defaultValue ? Boolean.TRUE : Boolean.FALSE);
-		this.todo(task);
-		return task;
-	}
-	
+
 	@Override
 	public Value<?> readContinue(final String title) {
-		
+
 		final ConsoleTtyTask<?> task = new TaskReadContinue(title);
 		this.todo(task);
 		return task;
 	}
-	
+
 	@Override
 	public Value<Number> readInteger(final String title) {
-		
+
 		final ConsoleTtyTask<Number> task = new TaskReadNumber(title, null);
 		this.todo(task);
 		return task;
 	}
-	
+
 	@Override
-	public Value<Number> readInteger(final String title,
-			final int defaultValue) {
-			
-		final ConsoleTtyTask<Number> task = new TaskReadNumber(title,
-				new Integer(defaultValue));
+	public Value<Number> readInteger(final String title, final int defaultValue) {
+		
+		final ConsoleTtyTask<Number> task = new TaskReadNumber(title, Integer.valueOf(defaultValue));
 		this.todo(task);
 		return task;
 	}
-	
+
 	@Override
 	protected Value<String> readPasswordImpl(final String title) {
-		
+
 		final ConsoleTtyTask<String> task = new TaskReadPassword(title);
 		this.todo(task);
 		return task;
 	}
-	
+
 	@Override
-	protected Value<String> readStringImpl(final String title,
-			final String defaultValue) {
-			
-		final ConsoleTtyTask<String> task = new TaskReadString(title,
-				defaultValue);
+	protected Value<String> readStringImpl(final String title, final String defaultValue) {
+		
+		final ConsoleTtyTask<String> task = new TaskReadString(title, defaultValue);
 		this.todo(task);
 		return task;
 	}
-	
+
 	@Override
 	protected boolean sendMessageImpl(final String message) {
-		
+
 		final TransferTarget target = this.internCheckPrepareMessage();
 		final byte[] bytes = message == null
-				? ConsoleTty.NULL_BYTES
-				: message.getBytes(Engine.CHARSET_UTF8);
+			? ConsoleTty.NULL_BYTES
+			: message.getBytes(Engine.CHARSET_UTF8);
 		target.absorbArray(bytes, 0, bytes.length);
 		target.absorb('\r');
 		target.absorb('\n');
-		/**
-		 * DO NOT use sendMessage from Tasks!
-		 */
+		/** DO NOT use sendMessage from Tasks! */
 		if (this.task != null) {
 			this.task.onTaskInit(this);
 		}
 		return true;
 	}
-	
+
 	@Override
 	protected boolean sendMessageImpl(final String title, final String body) {
-		
+
 		final TransferTarget target = this.internCheckPrepareMessage();
-		target.absorbBuffer(
-				Transfer.wrapBuffer(title.getBytes(Engine.CHARSET_UTF8)));
+		target.absorbBuffer(Transfer.wrapBuffer(title.getBytes(Engine.CHARSET_UTF8)));
 		target.absorbBuffer(Transfer.wrapBuffer(ConsoleTty.CRLF));
 		this.internSendMessageIdent(body, 1);
-		/**
-		 * DO NOT use sendMessage from Tasks!
-		 */
+		/** DO NOT use sendMessage from Tasks! */
 		if (this.task != null) {
 			this.task.onTaskInit(this);
 		}
 		return true;
 	}
-	
+
 	void sendStatus(final String message) {
-		
+
 		this.internCheckStatus();
-		this.collector.getTarget().absorbBuffer(
-				Transfer.wrapBuffer(message.getBytes(Engine.CHARSET_UTF8)));
+		this.collector.getTarget().absorbBuffer(Transfer.wrapBuffer(message.getBytes(Engine.CHARSET_UTF8)));
 	}
-	
+
 	@Override
 	public void setState(final ConsoleState state) {
-		
+
 		this.stateRequested = state;
 	}
-	
+
 	private void todo(final ConsoleTtyTask<?> task) {
-		
+
 		boolean flush = false;
 		synchronized (this) {
 			if (this.task == null) {
@@ -942,17 +830,34 @@ public abstract class ConsoleTty extends AbstractCharacterConsole {
 			this.flush();
 		}
 	}
-	
+
+	/** @return */
+	protected boolean tryPingClient() {
+
+		if (this.telnetDetected) {
+			final TransferTarget target = this.collector.getTarget();
+			target.absorbBuffer(Transfer.wrapBuffer(ConsoleTty.TELNET_PING));
+			this.flush();
+			return true;
+		}
+		if (this.ansiDetected) {
+			final TransferTarget target = this.collector.getTarget();
+			target.absorbBuffer(Transfer.wrapBuffer(ConsoleTty.TERMINAL_PING));
+			this.flush();
+			return true;
+		}
+		return false;
+	}
+
 	@Override
 	protected boolean write(final int c) {
-		
+
 		return this.collector.getTarget().absorb(c);
 	}
-	
+
 	@Override
 	protected boolean write(final String text) {
-		
-		return this.collector.getTarget().absorbBuffer(
-				Transfer.wrapBuffer(text.getBytes(Engine.CHARSET_UTF8)));
+
+		return this.collector.getTarget().absorbBuffer(Transfer.wrapBuffer(text.getBytes(Engine.CHARSET_UTF8)));
 	}
 }
